syntax = "proto3";

package auth;

option go_package = "/auth";

message Empty {
}

message Role {
    int64 role_id = 1;
    string role_name = 2;
    repeated int64 perm_ids = 3;
    int32 clientType = 4; // 使用 pkg/enum/client_type 的id作為參數
    bool is_system = 5; // 是否為系統預設角色  如果是則不可編輯和刪除
}
